<resources>
    <string name="app_name">Insta Magnet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_1">Hello blank fragment 1</string>
    <string name="hello_blank_fragment_2">Hello blank fragment 2</string>

    <string name="title_activity_upgrade_required">Upgrade Required</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign up</string>

    <!-- Drawer -->
    <string name="drawer_hello">Hi!</string>
    <string name="drawer_hello_user">Hi %s!</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="activity_login_btn_password_recover">Forgot your password?</string>
    <string name="activity_login_recover_password_dialog_msg">Enter your email address to recover your password:</string>
    <string name="activity_login_recover_password_success">An email will be sent to the address you provided so you can recover your password</string>
    <string name="error_does_not_exist">The email does not exist</string>

    <!-- Strings related to register -->
    <string name="action_register">Register</string>
    <string name="registration_succeeded">Registration succeeded</string>
    <string name="prompt_password_confirmation">Repeat Password</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>

    <!-- Strings related to register -->
    <string name="upgrade_required_message">You must update before continuing</string>
    <string name="update_now">Update now</string>

    <!-- Errors -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_confirmation">Passwords don\'t match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_unauthorized">You must sign in again</string>
    <string name="error_unknown">There is an unknown error</string>
    <string name="error_no_internet">There is no internet connection</string>
    <string name="error_wrong_credentials">Invalid email or password</string>

    <string-array name="tabs_title">
        <item>Listado</item>
        <item>Grabar</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>